--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,16 +25,16 @@
           <header class="masthead clearfix">
             <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.baseurl }}{{ site.avatar }}" alt="{{ site.title }}" /></a>
 
-            <div class="site-info">
+            <!-- <div class="site-info">
               <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
               <p class="site-description">{{ site.description }}</p> 
-            </div>
+            </div> -->
 
             <!-- NAVBAR STARTS -->
 
             <nav class="border border-2 border-dark shadow shadow-large fixed split-nav">
               <div class="nav-brand">
-                <h3><img src="logo.png" alt="logo" width="59vh" class="border-white"></h3>
+                <h3><img src="/images/logo.png" alt="logo" width="59vh" class="border-white"></h3>
               </div>
               <div class="collapsible">
                 <input id="collapsible1" type="checkbox" name="collapsible1">
@@ -45,9 +45,10 @@
                 </label>
                 <div class="collapsible-body">
                   <ul class="inline">
-                    <li><a href="#">Documentation</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Github</a></li>
+                    <li><a href="{{ site.baseurl }}/">Home</a></li>
+                    <li><a href="{{ site.baseurl }}/archive">Archive</a></li>
+                    <li><a href="{{ site.baseurl }}/search"></a></li>
+                    <li><a href="#">Portfolio</a></li>
                   </ul>
                 </div>
               </div>
