--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,12 +18,11 @@
   </head>
 
   <body>
-    <div id="bar"></div>
-    <div class="wrapper-container">
+    <div class="paper">
       <div class="wrapper-masthead">
         <div class="container">
           <header class="masthead clearfix">
-            <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.baseurl }}{{ site.avatar }}" alt="{{ site.title }}" /></a>
+            <!-- <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.baseurl }}{{ site.avatar }}" alt="{{ site.title }}" /></a> -->
 
             <!-- <div class="site-info">
               <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
@@ -47,7 +46,7 @@
                   <ul class="inline">
                     <li><a href="{{ site.baseurl }}/">Home</a></li>
                     <li><a href="{{ site.baseurl }}/archive">Archive</a></li>
-                    <li><a href="{{ site.baseurl }}/search"></a></li>
+                    <li><a href="{{ site.baseurl }}/search">Search</a></li>
                     <li><a href="#">Portfolio</a></li>
                   </ul>
                 </div>
@@ -61,7 +60,7 @@
       </div>
 
       <div class="wrapper-main">
-        <div id="main" role="main" class="container">
+        <div id="main" role="main" class="padding-top-large">
           {{ content }}
         </div>
       </div>
