--- a/assets/style.scss
+++ b/assets/style.scss
@@ -411,11 +411,9 @@ nav {
 }
 
 .wrapper-footer {
-  position: absolute;
   bottom: 0;
   width: 100%;
   height: 89px;
-  background-color: $lightGray;
 }
 
 footer {
@@ -434,15 +432,15 @@ body:after {
 }
 
 #bar {
-    background: #000;
-    height: 7px;
-    background-size: cover;
-    background-position: left 60%;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    overflow: hidden;
-    z-index: 1000;
+    // background: #000;
+    // height: 7px;
+    // background-size: cover;
+    // background-position: left 60%;
+    // position: fixed;
+    // top: 0;
+    // width: 100%;
+    // overflow: hidden;
+    // z-index: 1000;
 }
 
 .post h1{
