--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
                     <li><a href="{{ site.baseurl }}/">Home</a></li>
                     <li><a href="{{ site.baseurl }}/archive">Archive</a></li>
                     <li><a href="{{ site.baseurl }}/search">Search</a></li>
-                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="https://shubhendra-rajkarne.github.io/">Portfolio</a></li>
                   </ul>
                 </div>
               </div>
