--- a/assets/style.scss
+++ b/assets/style.scss
@@ -22,7 +22,6 @@ html {
 
 body {
   background: #fff;
-  font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: #404040;
   line-height: 1.7;
   font-weight: 400;
@@ -38,7 +37,6 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: $darkerGray;
   font-weight: bold;
 
@@ -264,18 +262,20 @@ p > img {
 // .masthead
 //
 
-.wrapper-masthead {
-  margin-bottom: 25px;
-}
+// USER: remove unrequired css
 
-.masthead {
-  padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
+// .wrapper-masthead {
+//   margin-bottom: 25px;
+// }
 
-  @include mobile {
-    text-align: center;
-  }
-}
+// .masthead {
+//   padding: 20px 0;
+//   border-bottom: 1px solid $lightGray;
+
+//   @include mobile {
+//     text-align: center;
+//   }
+// }
 
 .site-avatar {
   float: left;
@@ -308,7 +308,6 @@ p > img {
   margin: 0;
   color: $darkGray;
   cursor: pointer;
-  font-family: $helveticaNeue;
   font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
@@ -329,32 +328,32 @@ p > img {
   }
 }
 
-nav {
-  float: right;
-  margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
-  font-size: 18px;
+// nav {
+//   float: right;
+//   margin-top: 23px; // @TODO: Vertically middle align
+//   font-family: $helveticaNeue;
+//   font-size: 18px;
 
-  @include mobile {
-    float: none;
-    margin-top: 9px;
-    display: block;
-    font-size: 16px;
-  }
+//   @include mobile {
+//     float: none;
+//     margin-top: 9px;
+//     display: block;
+//     font-size: 16px;
+//   }
 
-  a {
-    margin-left: 20px;
-    color: $darkGray;
-    text-align: right;
-    font-weight: 300;
-    letter-spacing: 1px;
+//   a {
+//     margin-left: 20px;
+//     color: $darkGray;
+//     text-align: right;
+//     font-weight: 300;
+//     letter-spacing: 1px;
 
-    @include mobile {
-      margin: 0 10px;
-      color: $blue;
-    }
-  }
-}
+//     @include mobile {
+//       margin: 0 10px;
+//       color: $blue;
+//     }
+//   }
+// }
 
 //
 // .main
@@ -431,20 +430,19 @@ body:after {
     content: '';
 }
 
-#bar {
-    // background: #000;
-    // height: 7px;
-    // background-size: cover;
-    // background-position: left 60%;
-    // position: fixed;
-    // top: 0;
-    // width: 100%;
-    // overflow: hidden;
-    // z-index: 1000;
-}
+// #bar {
+//     background: #000;
+//     height: 7px;
+//     background-size: cover;
+//     background-position: left 60%;
+//     position: fixed;
+//     top: 0;
+//     width: 100%;
+//     overflow: hidden;
+//     z-index: 1000;
+// }
 
 .post h1{
-  font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   text-align: center;
   font-weight: bold;
   font-kerning: auto;
@@ -453,7 +451,6 @@ body:after {
 }
 
 .page h1{
-  font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   text-align: center;
   font-weight: bold;
   font-kerning: auto;
@@ -475,7 +472,6 @@ body:after {
 .cd-container a {
   color: #30434e;
   text-decoration: none;
-  font-family: "Open Sans", sans-serif;
 }
 
 .cd-container img {
@@ -483,7 +479,6 @@ body:after {
 }
 
 .cd-container h1, .cd-container h2 {
-  font-family: "Open Sans", sans-serif;
   font-weight: bold;
 }
 
@@ -625,7 +620,6 @@ Modules - reusable parts of our design
 }
 
 #carbonads {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif;
   display: inline-block;
   overflow: hidden;
   max-width: 270px;
