Fixed Header Font and added WiredJs for search box

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,9 @@
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
     <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
 
+    <!-- Wiredjs -->
+    <script type="module" src="https://unpkg.com/wired-elements?module"></script>
+
     <!-- Paper CSS -->
     <link rel="stylesheet" href="https://unpkg.com/papercss@1.8.2/dist/paper.min.css">
     
