--- a/assets/style.scss
+++ b/assets/style.scss
@@ -146,6 +146,17 @@ table tr td :last-child {
   background-color: #eee;
 }
 
+// Makes paper full page length
+.paper{
+  height: 100vh;
+}
+
+.contact-nav{
+  font-family: Neucha, sans-serif;
+  font-weight: 400; 
+  margin-bottom: 9px;
+}
+
 .share-box {
   font-weight: bold;
   color: #222;
