forced font-weight for contact-me label, removed user img from author profile card

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
                   <li><a href="{{ site.baseurl }}/archive">Archive</a></li>
                   <li><a href="{{ site.baseurl }}/search">Search</a></li>
                   <li><a href="https://shubhendra-rajkarne.github.io/">Portfolio</a></li>
-                  <li style="all: initial;"><label class="paper-btn btn-primary contact-nav" for="modal-1">Contact Me</label></li>
+                  <li style="all: initial;"><label class=" contact-nav paper-btn btn-primary" for="modal-1">Contact Me</label></li>
                 </ul>
               </div>
             </div>
