--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,25 +28,29 @@ layout: default
     {{ content }}
   </div>
 
+  <hr>
+
   <!-- Author Card -->
   <div>
-   
+
     <div class="card">
       <div class="card-body">
         <!-- TODO: add my photo -->
-        <img src="/images/logo.png"
-          style="border-radius: 50%; margin-right: 2rem; width: 100%; max-width: 100px; height: auto; aspect-ratio: auto; float: left; display: flex;">
+        <!-- <img src="/images/logo.png"
+          style="border-radius: 50%; margin-right: 2rem; width: 100%; max-width: 100px; height: auto; aspect-ratio: auto; float: left; display: flex;"> -->
         <div class="text-chunk">
           <h4 class="card-title" style="font-family: Neucha,sans-serif; display: block;">Shubhendra Rajkarne</h4>
           <p class="card-text">A programmer for money and fun and some more description about me..</p>
         </div>
 
       </div>
-
-      <div class="card-footer" style="text-align: center;">Follow me on These social media websites. Paste website
-        icons here.</div>
     </div>
   </div>
+  </div>
+
+  <p>Subscribe to the newsletter if you want to receive alerts for new blog posts. Don't worry! I won't spam you.</p>
+  <!-- TODO: Add subscribe to news letter part here -->
+  <p>Found it interesting ? Comment if you have any ideas for the next blog post.</p>
 
   <!-- LikeBtn.com BEGIN -->
   <span class="likebtn-wrapper" data-theme="custom" data-icon_l_c_v="#5405fb" data-icon_d_c_v="#fb0514"
