--- a/assets/style.scss
+++ b/assets/style.scss
@@ -50,14 +50,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 3rem;
   a {
     color: inherit;
   }
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 2.5rem;
 }
 
 @media (min-width: 769px){
@@ -73,11 +73,11 @@ h2 {
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 2rem;
 }
 
 h4 {
-  font-size: 18px;
+  font-size: 1.5rem;
   color: #222;
 }
 
