increased like/dislike counter size

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,9 +53,9 @@ layout: default
   <p>Found it interesting ? Comment if you have any ideas for the next blog post.</p>
 
   <!-- LikeBtn.com BEGIN -->
-  <span class="likebtn-wrapper" data-theme="custom" data-icon_l_c_v="#5405fb" data-icon_d_c_v="#fb0514"
-    data-ef_voting="grow" data-rich_snippet="true" data-show_like_label="false" data-voting_frequency="5"
-    data-counter_clickable="true"></span>
+  <span class="likebtn-wrapper" data-theme="custom" btn_size="25" data-f_size="13" data-icon_size="17"
+    data-icon_l_c_v="#5405fb" data-icon_d_c_v="#fb0514" data-ef_voting="grow" data-rich_snippet="true"
+    data-show_like_label="false" data-voting_frequency="5" data-counter_clickable="true"></span>
   <script>(function (d, e, s) { if (d.getElementById("likebtn_wjs")) return; a = d.createElement(e); m = d.getElementsByTagName(e)[0]; a.async = 1; a.id = "likebtn_wjs"; a.src = s; m.parentNode.insertBefore(a, m) })(document, "script", "//w.likebtn.com/js/w/widget.js");</script>
   <!-- LikeBtn.com END -->
 
