added comment section and about section in navbar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
   <meta name="theme-color" content="#000000">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/images/favicon-32x32.png">
-  {% include analytics_head.html %}
+ 
 </head>
 
 <body>
@@ -50,6 +50,7 @@
                   <li><a href="{{ site.baseurl }}/archive">Archive</a></li>
                   <li><a href="{{ site.baseurl }}/search">Search</a></li>
                   <li><a href="https://shubhendra-rajkarne.github.io/">Portfolio</a></li>
+                  <li><a href="{{ site.baseurl }}/about">About</a></li>
                   <li style="all: initial;"><label class=" contact-nav paper-btn btn-primary" for="modal-1">Contact Me</label></li>
                 </ul>
               </div>
@@ -112,7 +113,7 @@
     </div>
   </div>
 
-  <!-- {% include analytics.html %} -->
+ 
 </body>
 
 </html>
