--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,29 +29,12 @@ layout: default
   </div>
 
   <hr>
-  <br>  
+  <br>
   
-  <!-- Author Card -->
-  <div>
-
-    <div class="card">
-      <div class="card-body">
-        <!-- TODO: add my photo -->
-        <!-- <img src="/images/logo.png"
-          style="border-radius: 50%; margin-right: 2rem; width: 100%; max-width: 100px; height: auto; aspect-ratio: auto; float: left; display: flex;"> -->
-        <div class="text-chunk">
-          <h4 class="card-title" style="font-family: Neucha,sans-serif; display: block;">Shubhendra Rajkarne</h4>
-          <p class="card-text">A programmer for money and fun and some more description about me..</p>
-        </div>
-
-      </div>
-    </div>
-  </div>
-  </div>
 
   <p>Subscribe to the newsletter if you want to receive alerts for new blog posts. Don't worry! I won't spam you.</p>
   <!-- TODO: Add subscribe to news letter part here -->
-  <p>Found it interesting ? Comment if you have any ideas for the next blog post.</p>
+  <p>Found it interesting ? Comment if you have any ideas or suggestions.</p>
 
   <!-- LikeBtn.com BEGIN -->
   <span class="likebtn-wrapper" data-theme="custom" btn_size="25" data-f_size="13" data-icon_size="17"
@@ -60,7 +43,13 @@ layout: default
   <script>(function (d, e, s) { if (d.getElementById("likebtn_wjs")) return; a = d.createElement(e); m = d.getElementsByTagName(e)[0]; a.async = 1; a.id = "likebtn_wjs"; a.src = s; m.parentNode.insertBefore(a, m) })(document, "script", "//w.likebtn.com/js/w/widget.js");</script>
   <!-- LikeBtn.com END -->
 
-  <!-- Add comment section here -->
+ <!-- Comment section starts -->
 
-  {% include disqus.html %}
+ <script src="https://utteranc.es/client.js" repo="daemons-inside/daemons-inside.github.io" issue-term="pathname"
+ theme="github-dark" crossorigin="anonymous" async>
+ </script>
+
+<!-- Comment section ends -->
+
+  
 </article>
