--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,30 @@
 
   <meta name="theme-color" content="#000000">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/images/favicon-32x32.png">
+
+
+  <!-- Newsletter style  -->
+  <style>
+    #sib-container input:-ms-input-placeholder {
+      text-align: left;
+      font-family: "Neucha", sans-serif;
+      color: #c0ccda;
+    }
+
+    #sib-container input::placeholder {
+      text-align: left;
+      font-family: "Neucha", sans-serif;
+      color: #c0ccda;
+    }
+
+    #sib-container textarea::placeholder {
+      text-align: left;
+      font-family: "Neucha", sans-serif;
+      color: #c0ccda;
+    }
+  </style>
+  <link rel="stylesheet" href="https://sibforms.com/forms/end-form/build/sib-styles.css">
+
  
 </head>
 
@@ -108,6 +132,32 @@
       <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}
+
+          <!-- Newsletter Scripts  -->
+
+          <script>
+            window.REQUIRED_CODE_ERROR_MESSAGE = 'Please choose a country code';
+  
+            window.EMAIL_INVALID_MESSAGE = window.SMS_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
+  
+            window.REQUIRED_ERROR_MESSAGE = "This field cannot be left blank. ";
+  
+            window.GENERIC_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
+  
+  
+  
+  
+            window.translation = {
+              common: {
+                selectedList: '{quantity} list selected',
+                selectedLists: '{quantity} lists selected'
+              }
+            };
+  
+            var AUTOHIDE = Boolean(0);
+          </script>
+          <script src="https://sibforms.com/forms/end-form/build/main.js"></script>
+          
         </footer>
       </div>
     </div>
