newsletter subscribe margin removed

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -112,7 +112,7 @@ layout: default
           <div style="padding: 8px 0;">
             <div class="sib-form-block" style="text-align: left">
               <button class="btn-primary sib-form-block__button-with-loader"
-                style="font-size:16px; text-align:left; font-weight:700; font-family:&quot;Neucha&quot;, sans-serif;"
+                style="font-size:16px; text-align:left; margin-bottom: 0; font-weight:700; font-family:&quot;Neucha&quot;, sans-serif;"
                 form="sib-form" type="submit">
                 <svg class="icon clickable__icon progress-indicator__icon sib-hide-loader-icon"
                   viewBox="0 0 512 512">
