--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,6 +75,7 @@
                 <ul class="inline">
                   <li><a href="{{ site.baseurl }}/">Home</a></li>
                   <li><a href="{{ site.baseurl }}/archive">Archive</a></li>
+                  <li><a href="{{ site.baseurl }}/categories">Categories</a></li>
                   <li><a href="{{ site.baseurl }}/search">Search</a></li>
                   <li><a href="https://shubhendra-rajkarne.github.io/">Portfolio</a></li>
                   <li><a href="{{ site.baseurl }}/about">About</a></li>
