--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -124,7 +124,7 @@
     </div>
 
     <div class="wrapper-main">
-      <div id="main" role="main" class="padding-top-large">
+      <div id="main" role="main" class="container padding-top-large">
         {{ content }}
       </div>
     </div>
