--- a/assets/style.scss
+++ b/assets/style.scss
@@ -42,7 +42,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.7;
   margin: 1em 0 15px;
   padding: 0;
-  text-align: center;
+  // text-align: center;
 
   @include mobile {
     line-height: 1.4;
@@ -50,14 +50,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 3rem !important;
+  font-size: 3rem;
   a {
     color: inherit;
   }
 }
 
 h2 {
-  font-size: 2.2rem !important;
+  font-size: 2.2rem;
 }
 
 @media (min-width: 769px){
@@ -73,12 +73,17 @@ h2 {
 }
 
 h3 {
-  font-size: 1.8rem !important;
+  font-size: 1.8rem;
 }
 
 h4 {
   font-size: 1.5rem;
   color: #222;
+}
+
+pre {
+  // Removes paper css styles from the code snippets
+  border: none;
 }
 
 p {
@@ -236,12 +241,14 @@ strong, b {
 
 img {
   max-width: 100%;
+  border: none;
 }
 
 p > img {
   text-align: center;
   display: block;
   margin: 0 auto;
+  border: none;
 }
 
 // Fixes images in popup boxes from Google Translate
@@ -465,27 +472,27 @@ body:after {
 // }
 
 .post h1{
-  text-align: center;
+  // text-align: center;
   font-kerning: auto;
   font-feature-settings: "kern","liga","dlig","hlig","cswh";
   line-height: 1.2;
 }
 
 .page h1{
-  text-align: center;
+  // text-align: center;
   font-kerning: auto;
   font-feature-settings: "kern","liga","dlig","hlig","cswh";
   line-height: 1.2;
 }
 
 .author_title{
-  text-align: center;
+  // text-align: center;
   color: #939aa1;
   letter-spacing: 2px;
 }
 
 .post_date{
-  text-align: center;
+  // text-align: center;
   color: #939aa1;
 }
 
@@ -704,7 +711,7 @@ Modules - reusable parts of our design
 }
 
 .post-tags {
-  text-align: center;
+  // text-align: center;
   line-height: 35px;
 }
 
