--- a/assets/style.scss
+++ b/assets/style.scss
@@ -36,6 +36,14 @@ body {
   width: 100%;
 }
 
+@font-face {
+  font-family: intelFont;
+  src: url(/fonts/intel_font.ttf);
+}
+.intelfont {
+  font-family: intelFont;
+}
+
 h1, h2, h3, h4, h5, h6 {
   color: $darkerGray;
 
