reverted to simple paper css font

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,8 +65,8 @@
 
           <nav class="border border-2 border-dark shadow shadow-large fixed split-nav" id="paper-nav"
             style="transition: 0.5s ease-in-out;">
-            <div class="nav-brand" style="padding-top: 0.5rem;">
-              <h2 style="all: unset;"><a class="demonfont" href="/index.html"
+            <div class="nav-brand">
+              <h2 style="all: unset;"><a href="/index.html"
                   style="border-bottom: none; font-size: 1.8rem;"><span style="color: #d22b2b;">D</span>aemon's
                   Disciple</a>
               </h2>
