added hover effect for title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,6 @@
   <!-- Paper CSS -->
   <link rel="stylesheet" href="https://unpkg.com/papercss@1.8.2/dist/paper.min.css">
 
-  <!-- Heading Font -->
-  <link href="http://fonts.cdnfonts.com/css/a-charming-font" rel="stylesheet">
-
   <meta name="theme-color" content="#000000">
 
   <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/images/apple-touch-icon.png">
@@ -66,7 +63,7 @@
           <nav class="border border-2 border-dark shadow shadow-large fixed split-nav" id="paper-nav"
             style="transition: 0.5s ease-in-out;">
             <div class="nav-brand">
-              <h2 style="all: unset;"><a href="/index.html"
+              <h2 style="all: unset;"><a class="title-heading-hover" href="/index.html"
                   style="border-bottom: none; font-size: 1.8rem;"><span style="color: #d22b2b;">D</span>aemon's
                   Disciple</a>
               </h2>
