--- a/assets/style.scss
+++ b/assets/style.scss
@@ -139,6 +139,10 @@ blockquote, q {
   background-color: #ede1ff;
 }
 
+.title-heading-hover:hover{
+  color: #d22b2b;
+  background: black;
+}
 /*.detailed .entry p:first-of-type:first-letter {
     float: left;
     margin: 0.13em 0.05em 0 -0.05em;
