fixed colors for navlinks and cardlinks

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -138,6 +138,12 @@ blockquote, q {
   font-style: italic;
   background-color: #ede1ff;
 }
+nav-link-hover:hover{
+  color:#41403e;
+}
+.card-links{
+  color: #41403e;
+}
 
 .title-heading-hover:hover{
   color: #d22b2b;
