--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,7 +79,7 @@
                 <ul class="inline">
                   <li><a href="{{ site.baseurl }}/">Home</a></li>
                   <li><a href="https://shubhendra-rajkarne.github.io/">Portfolio</a></li>
-                  <li><a href="{{ site.baseurl }}/about">About</a></li>
+                  <li><a class="nav-link-hover" href="{{ site.baseurl }}/about">About</a></li>
                   <li style="all: initial;"><button class="contact-nav paper-btn btn-primary"
                       onclick="showContactMe()">Contact Me</button></li>
                 </ul>
