about link color fix

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -138,7 +138,7 @@ blockquote, q {
   font-style: italic;
   background-color: #ede1ff;
 }
-nav-link-hover:hover{
+a.nav-link-hover:hover{
   color:#41403e;
 }
 .card-links{
