--- a/assets/style.scss
+++ b/assets/style.scss
@@ -33,7 +33,7 @@ body {
   margin: 0 auto;
   max-width: 740px;
   padding: 0 10px;
-  width: 100%;
+  width: 100% !important;
 }
 
 h1, h2, h3, h4, h5, h6 {
